# stm32f427-hal

./: .gitmodules  CMakeLists.txt  CMakePresets.json  README.md  STM32F427ZGTX_FLASH.ld  openocd.cfg  startup_stm32f427zgtx.s
include/: dac.h  encoder.h  error.h  system_config.h
lib/CMSIS/Include/: cmsis_armclang.h  cmsis_clang.h  core_ca.h  core_cm0.h  core_cm0plus.h  core_cm1.h  core_cm23.h  core_cm3.h  core_cm33.h  core_cm35p.h  core_cm4.h  core_cm52.h  core_cm55.h  core_cm7.h  core_cm85.h  core_sc000.h  core_sc300.h  core_starmc1.h
lib/HAL/Include/: stm32f4xx_hal_conf.h
src/: assert.c  dac.c  encoder.c  error.c  main.c  stm32fxxx_it.c
src/msp/: dac_msp.c  tim_msp.c  usart_msp.c
